--- a/0202_sound/sound.html
+++ b/0202_sound/sound.html
@@ -46,7 +46,7 @@
     var particles;
     var random;
     var objectPool = [];
-    var src = "https://dl.dropbox.com/s/ytlerzw98ar2jm7/chiptune3%20-%202018_09_02%208.44.m4a?dl=0";
+    var src = "/audio/chiptune.mp3";
 
     var params = {
       volume: .5,
